Renamed variables & functions, code cleaned up mostly in main.ts, windowManager.ts still needs to be cleaned up, moved types to separate file, changed background in index.html so it looks nicer when resized

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Typescrip Rewrite</title>
+        <title>Multi window spheres animation</title>
         <style>
             * {
                 margin: 0;
                 padding: 0;
                 scrollbar-width: none;
                 overflow: hidden;
+            }
+            body {
+                background-color: #200050;
             }
         </style>
         <script src="out/three.min.js"></script>
