Added little express server
Little express server that:
* clears browser's local storage on first page load after server restart
* restarts on changes in app files
* refreshes web page
Updated README.md
Added needed dependencies
Made scripts to run app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
                 background-color: #200050;
             }
         </style>
-        <script src="out/three.min.js"></script>
+
+        <script type="importmap">
+            {
+                "imports": {
+                    "three": "../build/three.module.js"
+                }
+            }
+        </script>
     </head>
     <body>
         <script type="module" src="out/main.js"></script>
