Deployment fix :disappointed_relieved:
Fixed configuration of webpack, so now scripts look fine
Adjusted tsconfig
Adjusted imports in app .ts files
Threw out parcel (at this point it was unnecessary)
Updated import maps in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <script type="importmap">
             {
                 "imports": {
-                    "three": "../build/three.module.js"
+                    "three": "../build/three.module.js",
+                    "windowManager": "./out/windowManager.js",
+                    "multiSphereAnimation": "./out/multiSphereAnimation.js"
                 }
             }
         </script>
