I hope this is last fix of deployment ;-;

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                 "imports": {
                     "three": "../build/three.module.js",
                     "windowManager": "./out/windowManager.js",
-                    "multiSphereAnimation": "./out/multiSphereAnimation.js"
+                    "multiSphereAnimation": "./out/multiSphereAnimation.js",
+                    "three/examples/jsm/postprocessing/RenderPass": "../jsm/postprocessing/RenderPass.js",
+                    "three/examples/jsm/postprocessing/EffectComposer": "../jsm/postprocessing/EffectComposer.js",
+                    "three/examples/jsm/postprocessing/UnrealBloomPass": "../jsm/postprocessing/UnrealBloomPass.js",
+                    "three/examples/jsm/postprocessing/OutputPass": "../jsm/postprocessing/OutputPass.js"
                 }
             }
         </script>
